--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>PickNTrack.com</title>
 
    <!--CSS Link-->
-   <link rel="stylesheet" href="CSS/style.css">
+   <link rel="stylesheet" href="css/style.css">
 
     <!-- tailwind CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
